Respect sign for float